--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
-
 {
-    "build": {
-      "env": {},
-      "npmCommand": "npm install --legacy-peer-deps"
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
-  }
-  
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
