--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.4",
-    "chart.js": "^4.4.9",
-    "firebase": "^11.6.0",
-    "i18next": "^25.0.0",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
+    "firebase": "^10.6.0",
+    "i18next": "^23.7.11",
+    "i18next-browser-languagedetector": "^7.1.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-i18next": "^15.4.1",
-    "react-router-dom": "^6.30.0",
+    "react-i18next": "^13.5.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -48,8 +47,11 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
+  },
+  "resolutions": {
+    "typescript": "4.9.5"
   }
 }
