--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "util": "^0.12.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "eject": "react-scripts eject"
@@ -48,10 +49,20 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
   },
   "resolutions": {
     "typescript": "4.9.5"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^firebase/(.*)$": "<rootDir>/__mocks__/firebase/$1"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "testEnvironment": "jsdom"
   }
 }
