--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "resolutions": {
     "typescript": "4.9.5"
   },
-  "jest": {}
-
+  "jest": {
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
+  }
 }
