--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]  # Trigger only on main branch
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -19,28 +19,30 @@ jobs:
       with:
         node-version: 18
 
-    - name: 📦 Install dependencies (with legacy peer deps)
-      run: npm install --legacy-peer-deps
+    - name: 📦 Install dependencies (with legacy peer deps + polyfill)
+      run: |
+        npm install --legacy-peer-deps
+        npm install web-streams-polyfill
 
-    - name: ✅ Run tests
+    - name: 🧪 Run tests
       run: npm test -- --watchAll=false
 
-    - name: 🚀 Build the React app
+    - name: 🚀 Build project
       run: npm run build
 
-    - name: 🔐 Set up SSH agent
+    - name: Set up SSH key for EC2
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.EC2_KEY }}
 
-    - name: 📂 Deploy to EC2 instance
+    - name: 🚀 Deploy to EC2
       run: |
-        echo "🚀 Deploying to EC2..."
+        echo "Deploying to EC2 instance..."
         ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
-          cd /home/ubuntu/weather-footprint-app || exit 1
+          cd /home/ubuntu/DevOps-Project || exit 1
           git pull origin main || exit 1
-          npm install --legacy-peer-deps || exit 1
-          npm run build || exit 1
-          pm2 restart all || pm2 start npm --name "weather-app" -- start
+          source venv/bin/activate || exit 1
+          pip install -r requirements.txt || exit 1
+          nohup python app.py &  # Adjust this if your backend server is different
           exit 0
         EOF
