--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
   },
   "resolutions": {
     "typescript": "4.9.5"
-  }
+  },
+  "jest": {
+  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
+}
+
 }
