--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,15 @@ jobs:
       - name: ⬇️ Checkout repository
         uses: actions/checkout@v3
 
-      - name: 🛠 Set up Node.js
+      - name: 🧰 Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: 📦 Install dependencies (with legacy peer deps + polyfills)
+      - name: 📦 Install dependencies (including polyfill)
         run: |
           npm install --legacy-peer-deps
-          npm install --save-dev web-streams-polyfill undici
+          npm install web-streams-polyfill
 
       - name: 🧪 Run tests
         run: npm test -- --watchAll=false
@@ -43,6 +43,6 @@ jobs:
             git pull origin main || exit 1
             source venv/bin/activate || exit 1
             pip install -r requirements.txt || exit 1
-            nohup python app.py &  # Change this if your start command is different
+            nohup python app.py &  # Adjust this if your backend server is different
             exit 0
           EOF
