--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,47 @@
-name: Test EC2 SSH
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  ssh-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: ⬇️ Checkout code
+    - name: ⬇️ Checkout repository
       uses: actions/checkout@v3
 
-    - name: 🔑 Setup SSH
+    - name: 🟢 Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: 📦 Install dependencies
+      run: |
+        npm install --legacy-peer-deps
+        npm install web-streams-polyfill
+
+    - name: 🧪 Run tests
+      run: npm test -- --watchAll=false
+
+    - name: 🚀 Build project
+      run: npm run build
+
+    - name: 🔐 Set up SSH key for EC2
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.EC2_KEY }}
 
-    - name: 🚀 SSH into EC2
+    - name: 🚀 Deploy to EC2
       run: |
-        ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} 'echo SSH is working!'
+        ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+          echo "✅ Logged into EC2"
+          cd ~/weather-footprint-app || exit 1
+          git pull origin main || exit 1
+          npm install --legacy-peer-deps || exit 1
+          npm run build || exit 1
+          pm2 restart all || echo "⚠️ PM2 not found or app not running"
+        EOF
